--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -9,7 +9,7 @@ COPY package*.json .
 RUN npm install
 
 # Copy the rest of the frontend files
-COPY . .
+# COPY . .
 
 # Expose port 3000
 EXPOSE 3000
